--- a/Ethereal Cloud/wwwroot/css/Index.css
+++ b/Ethereal Cloud/wwwroot/css/Index.css
@@ -69,7 +69,7 @@ input {
     border-radius: 5px;
 }
 
-button {
+#button2 {
     width: 60%;
     height: 28px;
     margin: 10px auto;
@@ -87,7 +87,7 @@ button {
     cursor: pointer;
 }
 
-    button:hover {
+    #button2:hover {
         background: #3f2b65;
     }
 
@@ -114,4 +114,12 @@ button {
 
 #chk:checked ~ .signup label {
     transform: scale(.6);
+}
+
+#popup {
+    position: absolute;
+}
+
+.popup-message {
+    padding: 5px;
 }
