--- a/Ethereal Cloud/Pages/Upload.cshtml
+++ b/Ethereal Cloud/Pages/Upload.cshtml
@@ -1,205 +1,150 @@
 ﻿@page
 @model Ethereal_Cloud.Pages.UploadModel
 @{
-    <meta charset="utf-8">
-    <title>My Files</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    Layout = null;
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="/css/Site.css" asp-append-version="true">
+    ViewBag.Title = "Upload";
+    Layout = "Shared/_Layout.cshtml";
     <link rel="stylesheet" href="/css/Upload.css" asp-append-version="true">
+    <script defer src="/js/upload.js"></script>
+}
 
+<!-- File explorer -->
+<div id="file-explorer" class="row mt-3">
 
-    <!-- Top Navigation bar -->
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-        <div class="container">
-            <div class="navbar-brand">
-                <img src="~/images/LogoVector.svg" alt="logo" class="logo">
+    <!-- Files Toolbox -->
+    <div id="toolbox" class="col-lg-1 col-md-2 col-sm-2">
+        <div id="tools" class="row">
+
+            <!-- Sort button -->
+            <div id="tool-row" onclick="toggleImage()">
+                <a id="tool-label">
+                    <img id="toggleImage" class="row" src="~/images/tools/sort-alpha-down.svg" alt="Image 1">
+                </a>
+                <p class="row">Sort</p>
             </div>
 
-            
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="mynavbar">
-                <ul class="navbar-nav me-auto">
-                    <li class="nav-item">
-                        <a class="nav-link @(Request.Path == "/Upload" || Request.Path == "/" ? "active" : "")" class="icon" asp-area="" asp-page="/Upload">My Files</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link @(Request.Path == "/Bin" || Request.Path == "/" ? "active" : "")" class="icon" asp-area="" asp-page="/Bin">Bin</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link @(Request.Path == "/Settings" || Request.Path == "/" ? "active" : "")" class="icon" asp-area="" asp-page="/Settings">Settings</a>
-                    </li>
-                </ul>
-                <form class="d-flex">
-                    <input class="form-control me-2" type="text" placeholder="Search">
-                    <button class="btn btn-primary" type="button">Search</button>
-                </form>
+            <!-- New folder button -->
+            <div id="tool-row">
+                <a id="tool-label" asp-page-handler="Createfolder" asp-route-foldername="temp">
+                    <img class="row" src="~/images/tools/folder-plus.svg" alt="new-folder">
+                </a>
+                <p class="row">New</p>
             </div>
+
+            <!-- Share button -->
+            <div id="tool-row">
+                <a id="tool-label">
+                    <img class="row" src="~/images/tools/share.svg" alt="share">
+                </a>
+                <p class="row">Share</p>
+            </div>
+
+            <!-- Delete button -->
+            <div id="tool-row">
+                <a id="tool-label">
+                    <img class="row" src="~/images/tools/trash.svg" alt="trash">
+                </a>
+                <p class="row">Delete</p>
+            </div>
+
         </div>
-    </nav>
-
-
-    <div class="upload-page container mx-auto">
-    
-        <!-- File explorer -->
-        <div id="file-explorer" class="row mt-3">
-
-            <!-- Files Toolbox -->
-            <div id="toolbox" class="col-lg-1 col-md-2 col-sm-2">
-                <div id="tools" class="row">
-
-                    <!-- Sort button -->
-                    <div id="tool-row" onclick="toggleImage()">
-                        <a id="tool-label">
-                            <img id="toggleImage" class="row" src="~/images/tools/sort-alpha-down.svg" alt="Image 1">
-                        </a>
-                        <p class="row">Sort</p>
-                    </div>
-
-                    <!-- New folder button -->
-                    <div id="tool-row">
-                        <a id="tool-label" asp-page-handler="Createfolder" asp-route-foldername="temp">
-                            <img class="row" src="~/images/tools/folder-plus.svg" alt="new-folder">
-                        </a>
-                        <p class="row">New</p>
-                    </div>
-
-                    <!-- Share button -->
-                    <div id="tool-row">
-                        <a id="tool-label">
-                            <img class="row" src="~/images/tools/share.svg" alt="share">
-                        </a>
-                        <p class="row">Share</p>
-                    </div>
-
-                    <!-- Delete button -->
-                    <div id="tool-row">
-                        <a id="tool-label">
-                            <img class="row" src="~/images/tools/trash.svg" alt="trash">
-                        </a>
-                        <p class="row">Delete</p>
-                    </div>
-
-                </div>
-            </div>
-
-            <script>
-                // On click swap image
-                function toggleImage() {
-                    var imageElement = document.getElementById('toggleImage');
-                    if (imageElement.src.endsWith('sort-alpha-down.svg')) {
-                        imageElement.src = 'images/tools/sort-alpha-up.svg';
-                    } else {
-                        imageElement.src = 'images/tools/sort-alpha-down.svg';
-                    }
-                }
-            </script>
-
-
-            <!-- Files Box -->
-            <div id="filebox" class="col-lg-11 col-md-10 col-sm-10">
-                <!-- FilePath -->
-                <div id="filepath" class="row">
-                    <div class="col-11">
-                        <!-- Root Image -->
-                        <div class="col" id="path-root">
-                            <a asp-page-handler="GoToFolderInPath" asp-route-folderId="-2">
-                                <img src="~/images/file-path/path-root.svg" alt="path">
-                            </a>
-                        </div>
-                        
-                        <!-- Current Filepath-->
-                        @if (Model.FolderPath.Count > 0)
-                        {
-                            @foreach (var display in Model.FolderPath)
-                            {
-                                <div id="path-divider" class="col">\</div>
-
-                                <div class="file-hover" class="col">
-                                    <a asp-page-handler="GoToFolderInPath" asp-route-folderId="@display.FolderID">
-                                        <p id="path-folder">@display.Foldername</p>
-                                    </a>
-                                </div>
-                            }
-                        }
-                        else
-                        {
-
-                        }
-                    </div>
-
-                    <!-- Path Back button-->
-                    <div id="filepath-button" class="col-1">
-                        <a asp-page-handler="GoToFolderInPath" asp-route-folderId="-1">
-                            <img src="~/images/file-path/path-back.svg" alt="path">
-                        </a>
-                    </div>
-
-                </div>
-
-
-                <!-- Appears when the files are loaded -->
-                <div id="scrollbox" class="row">
-                    @if (Model.DisplayList.Count > 0)
-                    {
-                        @foreach (var display in Model.DisplayList)
-                        {
-                            <div id="uploaded-files" class="file-hover">
-                                <a asp-page-handler="@GetFileItemHandler(display.Type)" asp-route-itemname="@display.Id : @display.Name">
-                                    <img src="~/images/file-icons/@GetImageForFileType(@display.Type)" alt="logo" class="logo">
-                                </a>
-                                <p>@display.Name</p>
-                            </div>
-                        }
-                    }
-                    else
-                    {
-                        <div class="no-files">
-                            <div>
-                                <img class="row" src="~/images/tools/search.svg" alt="search" style="width: -webkit-fill-available; opacity: 50%;">
-                                <h3 class="row">No files here</h3>
-                            </div>
-                        </div>
-
-                    }
-                </div>
-            </div>
-            
-        </div>
-            
-
-        <!-- Bottom upload dotted box -->
-        <div id="upload-box" class="row mt-3">
-            <h3>Upload your files</h3>
-            <form method="post" enctype="multipart/form-data" asp-page-handler="Upload">
-                <div class="mb-3" id="file-input-box">
-                    <input class="form-control" type="file" name="uploadedFile" id="fileInput" multiple>
-                    <input type="submit" class="btn btn-success" value="Upload" />
-                </div>
-            </form>
-        </div>
-
-
     </div>
 
-    <!-- Console logger -->
     <script>
-        var logger = '@ViewData["logger"]';
-        if (logger !== null) {
-            console.log(decodeHtml(logger));
-        }
-
-        function decodeHtml(html) {
-            var txt = document.createElement("textarea");
-            txt.innerHTML = html;
-            return txt.value;
+        // On click swap image
+        function toggleImage() {
+            var imageElement = document.getElementById('toggleImage');
+            if (imageElement.src.endsWith('sort-alpha-down.svg')) {
+                imageElement.src = 'images/tools/sort-alpha-up.svg';
+            } else {
+                imageElement.src = 'images/tools/sort-alpha-down.svg';
+            }
         }
     </script>
 
+    <!-- Files Box -->
+    <div id="filebox" class="col-lg-11 col-md-10 col-sm-10">
+        <!-- FilePath -->
+        <div id="filepath" class="row">
+            <div class="col-11">
+                <!-- Root Image -->
+                <div class="col" id="path-root">
+                    <a asp-page-handler="GoToFolderInPath" asp-route-folderId="-2">
+                        <img src="~/images/file-path/path-root.svg" alt="path">
+                    </a>
+                </div>
+
+                <!-- Current Filepath-->
+                @if (Model.FolderPath.Count > 0)
+                {
+                    @foreach (var display in Model.FolderPath)
+                    {
+                        <div id="path-divider" class="col">\</div>
+
+                        <div class="file-hover" class="col">
+                            <a asp-page-handler="GoToFolderInPath" asp-route-folderId="@display.FolderID">
+                                <p id="path-folder">@display.Foldername</p>
+                            </a>
+                        </div>
+                    }
+                }
+                else
+                {
+
+                }
+            </div>
+
+            <!-- Path Back button-->
+            <div id="filepath-button" class="col-1">
+                <a asp-page-handler="GoToFolderInPath" asp-route-folderId="-1">
+                    <img src="~/images/file-path/path-back.svg" alt="path">
+                </a>
+            </div>
+
+        </div>
+
+
+        <!-- Appears when the files are loaded -->
+        <div id="scrollbox" class="row">
+            @if (Model.DisplayList.Count > 0)
+            {
+                @foreach (var display in Model.DisplayList)
+                {
+                    <div id="uploaded-files" class="file-hover">
+                        <a asp-page-handler="@GetFileItemHandler(display.Type)" asp-route-itemname="@display.Id : @display.Name">
+                            <img src="~/images/file-icons/@GetImageForFileType(@display.Type)" alt="logo" class="logo">
+                        </a>
+                        <p>@display.Name</p>
+                    </div>
+                }
+            }
+            else
+            {
+                <div class="no-files">
+                    <div>
+                        <img class="row" src="~/images/tools/search.svg" alt="search" style="width: -webkit-fill-available; opacity: 50%;">
+                        <h3 class="row">No files here</h3>
+                    </div>
+                </div>
+
+            }
+        </div>
+    </div>
+
+</div>
+
+
+<!-- Bottom upload dotted box -->
+<div id="upload-box" class="row mt-3">
+    <h3>Upload your files</h3>
+    <form method="post" enctype="multipart/form-data" asp-page-handler="Upload">
+        <div class="mb-3" id="file-input-box">
+            <input class="form-control" type="file" name="uploadedFile" id="fileInput" multiple>
+            <input type="submit" class="btn btn-success" value="Upload" />
+        </div>
+    </form>
+</div>
+
+@{
     string GetFileItemHandler(string fileHandler)
     {
         if (fileHandler == "Folder")
@@ -236,5 +181,4 @@
                 return "unknown.svg"; //Unknown type
         }
     }
-
 }
