--- a/Ethereal Cloud/wwwroot/css/Index.css
+++ b/Ethereal Cloud/wwwroot/css/Index.css
@@ -1,125 +1,16 @@
-﻿body {
-    margin: 0;
-    padding-top: 30px;
-    display: flex;
-    justify-content: center;
-    min-height: 100vh;
-    background: linear-gradient(to bottom, #0f0c29, #64618a);
-}
-
-/* All below css is for the login and signup page */
-
-.main {
-    background: #573b8a;
-    width: 320px;
-    height: 410px;
-    overflow: hidden;
-    border-radius: 10px;
-    box-shadow: 5px 20px 50px #000;
-    margin-top: 35px;
-}
-
-h1 {
-    color: whitesmoke;
-}
-
-#chk {
-    display: none;
-}
-
-.signup {
-    position: relative;
-    width: 100%;
-    height: 100%;
-}
-
-.labelstart {
-    color: #fff;
-    font-size: 1.8em;
-    justify-content: center;
-    display: flex;
-    margin: 10px;
-    font-weight: bold;
-    cursor: pointer;
-    transition: .5s ease-in-out;
-}
-
-.labelbottom {
-    padding-top: 5px;
-    color: #fff;
-    font-size: 1.8em;
-    justify-content: center;
-    display: flex;
-    margin: 130px;
-    font-weight: bold;
-    cursor: pointer;
-    transition: .5s ease-in-out;
-}
-
-input {
-    width: 60%;
-    height: 20px;
-    background: #e0dede;
-    justify-content: center;
-    display: flex;
-    margin: 20px auto;
-    padding: 15px;
+﻿.button {
+    background-color: #04AA6D;
     border: none;
-    outline: none;
-    border-radius: 5px;
-}
-
-#button2 {
-    width: 60%;
-    height: 28px;
-    margin: 10px auto;
-    justify-content: center;
-    display: block;
-    color: #fff;
-    background: #9877c5;
-    font-size: 15px;
-    font-weight: bold;
-    margin-top: 20px;
-    outline: none;
-    border: none;
-    border-radius: 5px;
-    transition: .2s ease-in;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
     cursor: pointer;
 }
 
-    #button2:hover {
-        background: #3f2b65;
-    }
-
-.login {
-    height: 380px;
-    background: #eee;
-    border-radius: 98% / 10%;
-    transform: translateY(-180px);
-    transition: .8s ease-in-out;
-}
-
-    .login label {
-        color: #573b8a;
-        transform: scale(.6);
-    }
-
-#chk:checked ~ .login {
-    transform: translateY(-505px);
-}
-
-    #chk:checked ~ .login label {
-        transform: scale(1);
-    }
-
-#chk:checked ~ .signup label {
-    transform: scale(.6);
-}
-
-#popup {
-    position: absolute;
-}
-
-.popup-message {
-    padding: 5px;
+#content {
+    align-content: center;
 }
