--- a/Ethereal Cloud/wwwroot/css/Site.css
+++ b/Ethereal Cloud/wwwroot/css/Site.css
@@ -2,6 +2,7 @@ body {
     font-family: 'Jost', sans-serif;
     background: #f5f6fa;
     overflow: auto;
+    margin-bottom: 50px;
 }
 
 * {
@@ -18,6 +19,23 @@ body {
     height: 5rem;
 }
 
+.navbar-brand {
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+    background-color: white;
+    display: flex;
+    align-items: center;
+}
+
+    .navbar-brand img {
+        max-width: 100%;
+        max-height: 100%;
+        width: auto;
+        height: auto;
+        padding: 5px;
+    }
+
 li {
     list-style: none;
     text-decoration: none;
@@ -28,4 +46,25 @@ a {
     flex-direction: column;
     justify-content: center;
     text-align: center;
+}
+
+/* Upload button */
+.btn {
+    background: #9877c5;
+    border-color: black;
+}
+
+    .btn:hover {
+        background-color: #705892;
+        border-color: black;
+    }
+
+#footer {
+    position: fixed;
+    height: 50px;
+    background-color: red;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+    margin-bottom: 0px;
 }
