Centered all text on home page

--- a/Ethereal Cloud/Pages/Index.cshtml
+++ b/Ethereal Cloud/Pages/Index.cshtml
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/css/Index.css" asp-append-version="true">
 }
 
-<div class="container mt-3" id="content">
+<div class="text-center p-3" id="content">
     <h3 style="text-align:center;"><b>Welcome</b></h3>
     <p style="text-align:center;">Home page where there will be more information about the website and what it is</p>
     <h3>Login below!</h3>
