Changed heading profile to account

--- a/Ethereal Cloud/Pages/Account.cshtml
+++ b/Ethereal Cloud/Pages/Account.cshtml
@@ -1,12 +1,12 @@
 ﻿@page
 @model Ethereal_Cloud.Pages.ProfileModel
 @{
-    ViewBag.Title = "Profile";
+    ViewBag.Title = "Account";
     Layout = "Shared/_Layout.cshtml";
-    <link rel="stylesheet" href="/css/Profile.css" asp-append-version="true">
+    <link rel="stylesheet" href="/css/Account.css" asp-append-version="true">
 }
 
 <div class="container mt-3">
-    <h3 style="text-align:center;"><b>Profile</b></h3>
+    <h3 style="text-align:center;"><b>Account</b></h3>
     <p style="text-align:center;">Here the user will be able to change any Profile e.g. sign out</p>
 </div>
