--- a/Ethereal Cloud/Pages/Index.cshtml
+++ b/Ethereal Cloud/Pages/Index.cshtml
@@ -6,9 +6,8 @@
     <link rel="stylesheet" href="/css/Index.css" asp-append-version="true">
 }
 
-<div class="text-center p-3" id="content">
+<div class="text-center p-3">
     <h3 style="text-align:center;"><b>Welcome</b></h3>
     <p style="text-align:center;">Home page where there will be more information about the website and what it is</p>
-    <h3>Login below!</h3>
-    <a href="/Login" class="button">Login or Register now</a>
+
 </div>
