--- a/Ethereal Cloud/Pages/Shared/_Layout.cshtml
+++ b/Ethereal Cloud/Pages/Shared/_Layout.cshtml
@@ -38,7 +38,11 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/Bin">Bin</a>
                     </li>
-                </ul>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="/Login">Login</a>
+                    </li>
+                </ul>              
 
                 <!-- Profile picture icon on right side -->
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0 profile-menu">
@@ -48,6 +52,7 @@
                                 <img src="~/images/profilepic.jpg" alt="Profile Picture">
                             </div>
                         </a>
+
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="/Account"><i class="fas fa-sliders-h fa-fw"></i> Account</a></li>
                             <li><a class="dropdown-item" href="/Settings"><i class="fas fa-cog fa-fw"></i> Settings</a></li>
