--- a/Ethereal Cloud/Pages/Upload.cshtml
+++ b/Ethereal Cloud/Pages/Upload.cshtml
@@ -123,7 +123,25 @@
     </form>
 </div>
 
+
+
+
 @{
+    <!-- Console logger -->
+    <script>
+        var logger = '@ViewData["logger"]';
+        if (logger !== null) {
+            console.log(decodeHtml(logger));
+        }
+
+        function decodeHtml(html) {
+            var txt = document.createElement("textarea");
+            txt.innerHTML = html;
+            return txt.value;
+        }
+    </script>
+
+
     string GetFileItemHandler(string fileHandler)
     {
         if (fileHandler == "Folder")
