--- a/Ethereal Cloud/Pages/Register.cshtml
+++ b/Ethereal Cloud/Pages/Register.cshtml
@@ -1,36 +1,43 @@
 ﻿@page
-@model Ethereal_Cloud.Pages.LoginModel
+@model Ethereal_Cloud.Pages.RegisterModel
 @{
-    ViewBag.Title = "Login";
+    ViewBag.Title = "Register";
     Layout = "Shared/_Layout.cshtml";
     <link rel="stylesheet" href="/css/Login.css" asp-append-version="true">
 }
 
 <div class="main">
     <div class="login-container align-items-center">
-        <h2>Login</h2>
-        <form method="post" asp-page-handler="Login">
+        <h2>Register</h2>
+        <form method="post" asp-page-handler="Signup">
             <div class="form-floating">
                 <input id="username" class="form-control" name="username" placeholder=" " required>
+                <label for="username">Username</label>
+            </div>
+
+            <div class="form-floating">
+                <input type="email" class="form-control" id="email" placeholder=" " name="email" required>
                 <label for="email">Email</label>
             </div>
 
             <div class="form-floating">
-                <input type="password" class="form-control" name="password" id="password" placeholder=" " required>
+                <input type="password" class="form-control" name="password" placeholder=" " id="password" required>
                 <label for="password">Password</label>
+            </div>
+
+            <div class="form-floating">
+                <input type="password" class="form-control" id="PasswordConf" placeholder=" " name="password" required>
+                <label for="password">Confirm Password</label>
                 <span class="password-toggle" onclick="togglePassword()">Show</span>
             </div>
 
             <div class="mb-3">
-                <a href="/Register" class="text-muted text-end">Forgot Password?</a>
+                <button type="submit" id="login-btn" class="btn btn-primary">Register</button>
             </div>
 
             <div class="mb-3">
-                <button type="submit" id="login-btn" class="btn btn-primary">Login</button>
-            </div>
-
-            <div class="mb-3">Don't have an account?
-                <a href="/Register" class="text-primary">Sign Up</a>
+                Already have an account?
+                <a href="/Login" class="text-primary">Sign In</a>
             </div>
         </form>
     </div>
@@ -73,8 +80,10 @@
 <!-- Console logger -->
 <script>
     function togglePassword() {
-        const passwordInput = document.getElementById('password');
-        passwordInput.type = (passwordInput.type === 'password') ? 'text' : 'password';
+        const passwordInput1 = document.getElementById('password');
+        const passwordInput2 = document.getElementById('PasswordConf');
+        passwordInput1.type = (passwordInput1.type === 'password') ? 'text' : 'password';
+        passwordInput2.type = (passwordInput2.type === 'password') ? 'text' : 'password';
     }
 
     var logger = '@ViewData["logger"]';
