--- a/Ethereal Cloud/Pages/Register.cshtml
+++ b/Ethereal Cloud/Pages/Register.cshtml
@@ -9,45 +9,44 @@
 <div class="main">
     <div class="login-container align-items-center">
         <h2>Register</h2>
-        <form method="post" asp-page-handler="Signup">
-            <div class="form-floating">
-                <input id="username" class="form-control" name="username" placeholder=" " required>
-                <label for="username">Username</label>
-            </div>
+        <div class="signup">
+            <form method="post" asp-page-handler="Signup">
+                <div class="form-floating">
+                    <input id="username" class="form-control" name="username" placeholder=" " required>
+                    <label for="username">Username</label>
+                </div>
 
-            <div class="form-floating">
-                <input type="email" class="form-control" id="email" placeholder=" " name="email" required>
-                <label for="email">Email</label>
-            </div>
+                <div class="form-floating">
+                    <input type="email" class="form-control" id="email" placeholder=" " name="email" required>
+                    <label for="email">Email</label>
+                </div>
 
-            <div class="form-floating">
-                <input type="password" class="form-control" name="password" placeholder=" " id="password" required>
-                <label for="password">Password</label>
-            </div>
+                <div class="form-floating">
+                    <input type="password" class="form-control" name="Password" placeholder=" " id="Password" required>
+                    <label for="password">Password</label>
+                </div>
 
-            <div class="form-floating">
-                <input type="password" class="form-control" id="PasswordConf" placeholder=" " name="password" required>
-                <label for="password">Confirm Password</label>
-                <span class="password-toggle" onclick="togglePassword()">Show</span>
-            </div>
+                <div class="form-floating">
+                    <input type="password" class="form-control" id="PasswordConf" placeholder=" " name="PasswordConf" required>
+                    <label for="password">Confirm Password</label>
+                    <span class="password-toggle" onclick="togglePassword()">Show</span>
+                </div>
 
-            <div class="mb-3">
-                <button type="submit" id="login-btn" class="btn btn-primary">Register</button>
-            </div>
+                <div class="mb-3">
+                    <button type="submit" id="button2" class="btn btn-primary">Register</button>
+                </div>
 
-            <div class="mb-3">
-                Already have an account?
-                <a href="/Login" class="text-primary">Sign In</a>
-            </div>
-        </form>
+                <div class="mb-3">
+                    Already have an account?
+                    <a href="/Login" class="text-primary">Sign In</a>
+                </div>
+            </form>
+        </div>
     </div>
 </div>
 
 <div class="popup-message">
-    @if (Model.errornum == -1)
-    {
-
-    }
+    @if (Model.errornum == -1) { }
 
     @if (Model.errornum == 0)
     {
@@ -80,7 +79,7 @@
 <!-- Console logger -->
 <script>
     function togglePassword() {
-        const passwordInput1 = document.getElementById('password');
+        const passwordInput1 = document.getElementById('Password');
         const passwordInput2 = document.getElementById('PasswordConf');
         passwordInput1.type = (passwordInput1.type === 'password') ? 'text' : 'password';
         passwordInput2.type = (passwordInput2.type === 'password') ? 'text' : 'password';
