--- a/Ethereal Cloud/Pages/Login.cshtml
+++ b/Ethereal Cloud/Pages/Login.cshtml
@@ -26,10 +26,11 @@
             </div>
 
             <div class="mb-3">
-                <button type="submit" id="login-btn" class="btn btn-primary">Login</button>
+                <button type="submit" id="button2" class="btn btn-primary">Login</button>
             </div>
 
-            <div class="mb-3">Don't have an account?
+            <div class="mb-3">
+                Don't have an account?
                 <a href="/Register" class="text-primary">Sign Up</a>
             </div>
         </form>
@@ -37,34 +38,13 @@
 </div>
 
 <div class="popup-message">
-    @if (Model.errornum == -1)
-    {
-
-    }
+    @if (Model.errornum == -1) { }
 
     @if (Model.errornum == 0)
     {
-        <!-- Success Alert -->
-        <div class="alert alert-success alert-dismissible fade show mx-auto">
-            <strong>Success!</strong> You have successfully registered.
-            <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-        </div>
-    }
-
-    @if (Model.errornum == 1)
-    {
-        <!-- Error Alert -->
-        <div class="alert alert-danger alert-dismissible fade show mx-auto">
-            <strong>Error!</strong> A problem has been occurred while submitting your data.
-            <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-        </div>
-    }
-
-    @if (Model.errornum == 2)
-    {
         <!-- Error Alert -->
         <div class="alert alert-danger alert-dismissible fade show mx-auto" id="popup">
-            <strong>Error!</strong> Your passwords must match in both inputs
+            <strong>Error!</strong> The username or password is incorrect
             <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
         </div>
     }
