Added comments to code

--- a/Ethereal Cloud/wwwroot/css/Site.css
+++ b/Ethereal Cloud/wwwroot/css/Site.css
@@ -57,7 +57,7 @@ a {
     margin-bottom: 0px;
 }
 
-/* Profile Picture */
+/* Profile Picture on nav bar right side */
 .profile-pic {
     display: inline-block;
     vertical-align: middle;
