--- a/Ethereal Cloud/wwwroot/css/Login.css
+++ b/Ethereal Cloud/wwwroot/css/Login.css
@@ -24,6 +24,7 @@
     position: relative;
 }
 
+/* Password revealer toggle */
 .password-toggle {
     cursor: pointer;
     position: absolute;
@@ -38,11 +39,13 @@
         color: #495057;
     }
 
+/* Login and register page input box style */
 .mb-3 {
     text-align: center;
     align-content: center;
 }
 
+/* Login and register submit button */
 #login-btn {
     align-content: center;
     background-color: darkslategrey;
