Added terms + conditions and comments

--- a/Ethereal Cloud/wwwroot/css/Login.css
+++ b/Ethereal Cloud/wwwroot/css/Login.css
@@ -50,3 +50,9 @@
     align-content: center;
     background-color: darkslategrey;
 }
+
+
+/* Terms and conditions popup formatting */
+.modal-body p {
+    font-size: 16px;
+}
