Changed filename extension of images

--- a/Ethereal Cloud/Pages/Upload.cshtml
+++ b/Ethereal Cloud/Pages/Upload.cshtml
@@ -54,7 +54,7 @@
             <!-- Path Back button-->
             <div id="filepath-button" class="col-1">
                 <a asp-page-handler="GoToFolderInPath" asp-route-folderId="-1">
-                    <img src="~/images/file-path/path-back.svg" alt="path">
+                    <img src="~/images/file-path/path-back.png" alt="path">
                 </a>
             </div>
 
@@ -62,7 +62,7 @@
                 <!-- Root Image -->
                 <div class="col" id="path-root">
                     <a asp-page-handler="GoToFolderInPath" asp-route-folderId="-2">
-                        <img src="~/images/file-path/path-root.svg" alt="path">
+                        <img src="~/images/file-path/path-root.png" alt="path">
                     </a>
                 </div>
 
