--- a/Ethereal Cloud/wwwroot/css/Upload.css
+++ b/Ethereal Cloud/wwwroot/css/Upload.css
@@ -51,17 +51,26 @@
     padding: 0px;
 }
 
+/* This is where the scrollbox is contained */
+#filebox {
+    height: fit-content;
+    background: #f2f2f2;
+    border: solid;
+    border-color: #808080;
+    border-radius: 20px;
+    padding: 0px;
+    overflow: hidden;
+}
+
 /* Directory at top of page */
 #filepath {
     box-sizing: border-box;
     border-bottom: solid #808080;
     padding: 5px;
-    padding-left: 10%;
-    padding-right: 10%;
     background-color: #cbbbe2;
-    box-shadow: inset 0px 0px 20px 0px #80808066;
     display: flex;
-    align-items: center; /* Align items vertically */
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #path-root {
@@ -70,21 +79,43 @@
 
     #path-root img {
         height: 25px;
-        padding-right: 5px;
     }
-
-#path-folder {
-    display: contents;
-}
-
-#path-divider {
-    display: contents;
-    font-weight: bold;
-}
 
 #filepath-button {
     text-align: center;
-    display: flow;
+    display: grid;
+    margin-left: 8px;
+}
+
+    #filepath-button img {
+        width: 45px;
+    }
+
+/* Filepath styling */
+#path-divider {
+    font-weight: bold;
+    font-size: 20px;
+    color: black;
+    margin-left: 5px;
+    margin-right: 5px
+}
+
+.file-hover {
+    display: grid;
+}
+
+    .file-hover a {
+        text-decoration: none;
+        color: black;
+    }
+
+    .file-hover :hover {
+        color: aqua;
+    }
+
+#path-folder {
+    text-overflow: ellipsis;
+    cursor: pointer;
 }
 
 .no-files {
@@ -97,17 +128,14 @@
     align-items: center;
 }
 
+.col {
+    flex: none;
+}
+
 #content-container {
-    display: flex; /* Make content container a flex container */
+    display: contents;
+    justify-content: flex-start;
 }
-
-#filepath-button {
-    display: flex;
-}
-
-    #filepath-button img {
-        height: 25px;
-    }
 
 /* This is where all the uploaded files are contained */
 #scrollbox {
@@ -172,28 +200,4 @@
     .btn:hover {
         background-color: #705892;
         border-color: black;
-    }
-
-
-/* This is where the scrollbox is contained */
-#filebox {
-    height: fit-content;
-    background: #f2f2f2;
-    border: solid;
-    border-color: #808080;
-    border-radius: 20px;
-    padding: 0px;
-    overflow: hidden;
-}
-
-.file-hover {
-    transition: background-color 0.3s ease; /* Add a smooth transition effect */
-}
-
-    /* Define the style when the element is being hovered over */
-    .file-hover:hover {
-        background-color: #ede6f8;
-        border: 2px solid;
-        border-color: #cbbbe2;
-        border-radius: 5px;
     }
