Moved button style to site to override all buttons

--- a/Ethereal Cloud/wwwroot/css/Site.css
+++ b/Ethereal Cloud/wwwroot/css/Site.css
@@ -88,3 +88,13 @@ a {
     text-align: center;
     margin-top: 10px;
 }
+
+.btn {
+    background: #9877c5;
+    border-color: black;
+}
+
+    .btn:hover {
+        background-color: #705892;
+        border-color: black;
+    }
