--- a/Ethereal Cloud/Pages/Shared/_Layout.cshtml
+++ b/Ethereal Cloud/Pages/Shared/_Layout.cshtml
@@ -27,10 +27,6 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
-                    <li class="nav-item active">
-                        <a class="nav-link" href="/Index">Home</a>
-                    </li>
-
                     <li class="nav-item">
                         <a class="nav-link" href="/Upload">Upload</a>
                     </li>
@@ -40,24 +36,11 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="/Login">Login</a>
+                        <a class="nav-link" href="/Shared">Shared</a>
                     </li>
-                </ul>              
 
-                <!-- Profile picture icon on right side -->
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0 profile-menu">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            <div class="profile-pic">
-                                <img src="~/images/profilepic.jpg" alt="Profile Picture">
-                            </div>
-                        </a>
-
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="/Settings"><i class="fas fa-cog fa-fw"></i> Settings</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="#"><i class="fas fa-sign-out-alt fa-fw"></i> Log Out</a></li>
-                        </ul>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/Account">Account</a>
                     </li>
                 </ul>
             </div>
